# maintainer-signal

./: .gitignore  CODEX_FOR_OSS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-failure-review.md
examples/: issues.json
examples/github-actions/: maintainer-signal.yml
src/maintainer_signal/: __init__.py  cli.py  core.py
tests/: test_core.py
